--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,14 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-   
+    <link rel="icon" type="image/x-icon" href="./images/D (1).png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=IBM+Plex+Sans+Devanagari&family=Inter:wght@200&family=Ubuntu:wght@300&display=swap"
+      rel="stylesheet"
+    />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,7 +32,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>TasteIT</title>
-    <link rel="icon" type="image/x-icon" href="./images/D (1).png">
+  
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
